# kiahk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Kiahk.podspec  Package.swift  README.md  SECURITY.md  composer.json  go.mod  phpunit.xml.dist
.github/: pull_request_template.md
.github/workflows/: release-c.yml  release-cocoapods.yml  release-maven.yml  release-npm.yml  release-nuget.yml  release-pub.yml  release-pypi.yml  test-c.yml  test-csharp.yml  test-dart.yml  test-go.yml  test-js.yml  test-kotlin.yml  test-php.yml  test-py.yml  test-swift.yml
c/: .gitignore  CMakeLists.txt  LICENSE  README.md
c/include/: kiahk.h
c/src/: algorithms.c  coptic_calendar.c  coptic_date.c  coptic_months_data.c  errors.c  feast.c  feasts_data.c  gregorian_date.c
c/tests/: test_kiahk.c  test_runner.h
core/: algorithms.md  coptic_months.json  feasts.json  test-vectors.json
csharp/: .gitignore  Kiahk.sln  README.md
csharp/Kiahk/: Algorithms.cs  CopticCalendar.cs  CopticDate.cs  CopticMonthsData.cs  Errors.cs  Feast.cs  FeastsData.cs  GregorianDate.cs  Kiahk.csproj
csharp/Kiahk.Tests/: Kiahk.Tests.csproj  KiahkTests.cs
dart/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
dart/example/: kiahk_example.dart
dart/lib/: kiahk.dart
dart/lib/src/: algorithms.dart  coptic_calendar.dart  coptic_date.dart  coptic_months_data.dart  errors.dart  feast.dart  feasts_data.dart  gregorian_date.dart
dart/test/: kiahk_test.dart
demo/: README.md  app.js  index.html  style.css
docs/superpowers/plans/: 2026-03-21-kiahk-implementation.md
docs/superpowers/specs/: 2026-03-21-kiahk-design.md
go/: .gitignore  README.md  algorithms.go  calendar.go  coptic_date.go  coptic_months_data.go  doc.go  errors.go  feast.go  feasts_data.go  go.mod  gregorian_date.go  kiahk_test.go
js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
js/src/: CopticCalendar.ts  CopticDate.ts  Feast.ts  GregorianDate.ts  algorithms.ts  coptic-months-data.ts  errors.ts  feasts-data.ts  index.ts
js/tests/: kiahk.test.ts
kotlin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/src/main/kotlin/com/wizardlabz/kiahk/: Algorithms.kt  CopticCalendar.kt  CopticDate.kt  CopticMonths.kt  Exceptions.kt  Feast.kt  Feasts.kt  GregorianDate.kt
kotlin/src/test/kotlin/com/wizardlabz/kiahk/: KiahkTest.kt
php/: .gitignore  README.md  composer.json  phpunit.xml.dist
php/src/: Algorithms.php  CopticCalendar.php  CopticDate.php  CopticMonths.php  Feast.php  Feasts.php  GregorianDate.php
php/src/Exception/: InvalidCopticDateException.php  InvalidCopticMonthException.php  InvalidGregorianDateException.php  UnknownFeastException.php  UnsupportedLocaleException.php
php/tests/: KiahkTest.php
py/: .gitignore  README.md  pyproject.toml
py/src/kiahk/: __init__.py  algorithms.py  coptic_calendar.py  coptic_date.py  coptic_months_data.py  errors.py  feast.py  feasts_data.py  gregorian_date.py
py/tests/: test_kiahk.py
scripts/: bump-version.sh
swift/: .gitignore  Package.swift  README.md
swift/Sources/Kiahk/: Algorithms.swift  CopticCalendar.swift  CopticDate.swift  CopticMonthsData.swift  Errors.swift  Feast.swift  FeastsData.swift  GregorianDate.swift
swift/Tests/KiahkTests/: KiahkTests.swift
