[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiahk"
version = "0.1.2"
description = "Coptic calendar arithmetic — date conversion, Easter, and feast days"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "WizardLabz" }]
maintainers = [{ name = "Amir Magdy" }]
keywords = [
  "coptic",
  "calendar",
  "easter",
  "coptic-calendar",
  "kiahk",
  "kiahk-calendar",
  "orthodox",
  "feast",
  "aboqty",
  "قبطي",
  "تقويم",
  "كيهك",
  "عيد",
  "القيامة",
  "القيامه",
  "أبقطي",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/amir-magdy-of-wizardlabz/kiahk"
Repository = "https://github.com/amir-magdy-of-wizardlabz/kiahk"
Issues = "https://github.com/amir-magdy-of-wizardlabz/kiahk/issues"
License = "https://github.com/amir-magdy-of-wizardlabz/kiahk/blob/master/LICENSE"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
